# cbugtrack

./: CMakeLists.txt
resources/: 123.icns
src/: HelperFunctions.h  LoginScreen.cpp  LoginScreen.h  TrackerScreen.cpp  TrackerScreen.h  db.h  main.cpp  sync.h
